# calos

./: .gitignore  CONTRIBUTING.rst  INSTALL.rst  LICENSE  Makefile.am  NOTICE  README.rst  README.txt  VERSION  autogen.sh  ch-daemon.service  clearly.service  clearstack.service  configure.ac  install.sh  preview.afdesign  profile.afdesign  requirements.txt  test.py
.github/workflows/: main.yaml  publish.yaml  test.yaml
cmd/: Makefile.am  ch-fromhost  ch-test  check.c  checkns.c  completion.bash  config.h.in~  convert  core.c  core.h  daemon.py  deploy  deploy.py  equip  fromhost  fuse.c  fuse.h  image.py  link.c  link.h  list  list.c  list.py  logs  logs.c  misc.c  misc.h  net.c  net.h  run-oci.py  run.c  stop  stop.c  test  use.c
data/: Makefile.am
data/styles/: main.scss
data/styles/base/: _variables.scss
data/styles/layout/: _header.scss  _navigation.scss  _sidebar.scss
data/styles/pages/: _index.scss  _studio.scss
data/templates/: main.html
data/templates/layout/: header.html  navigation.html  sidebar.html
data/templates/pages/: index.html  studio.html
doc/: Makefile.am  _loc.rst  best_practices.rst  bugs.rst  ch-fromhost.rst  clearly-check.rst  clearly-checkns.rst  clearly-convert.rst  clearly-deploy.rst  clearly-equip.rst  clearly-fromhost.rst  clearly-image.rst  clearly-list.rst  clearly-logs.rst  clearly-run-oci.rst  clearly-run.rst  clearly-stop.rst  clearly-test.rst  clearly.rst  completion.bash.rst  conf.py  dev.rst  faq.rst  index.rst  install.rst  install.sh  preview.afdesign  py_env.rst  robots.txt  see_also.rst  tutorial.rst
doc/_ext/clearly/: LICENSE  __init__.py  builder.py  header.html  highlighting.py  layout.html  logos.py  page.html  sidebar.html
doc/_ext/sphinx_core/: __init__.py  builder.py  code.py  footer.html  header.html  hero.py  layout.html  search.html  sidebar.html  spline.py  theme.conf
doc/_ext/sphinx_core/styles/: main.css  main.scss
doc/_ext/sphinx_core/styles/base/: _variables.scss
doc/_ext/sphinx_core/styles/components/: _admonition.scss  _code.scss  _copy.scss  _footer.scss  _headerlink.scss  _hero.scss  _navigation.scss  _search.scss  _slider.scss  _spline.scss  _tooltip.scss
doc/_ext/sphinx_core/styles/layout/: _header.scss  _sidebar.scss
doc/_ext/sphinx_core/templates/base/: layout.html
doc/_ext/sphinx_design/: extension.py
doc/_ext/theme/: __init__.py  builder.py  calendar.py  code.py  footer.html  header.html  hero.py  highlighting.py  json.py  layout.html  scrolltop.html  sidebar.html  slider.py  theme.conf
doc/_ext/theme/styles/: main.scss
doc/_ext/theme/styles/base/: _fonts.scss  _variables.scss
doc/_ext/theme/styles/components/: _admonition.scss  _alignment.scss  _calendar.scss  _code.scss  _footnote.scss  _headerlink.scss  _hero.scss  _scrolltop.scss  _slider.scss  _tooltip.scss
doc/_ext/theme/styles/layout/: _footer.scss  _header.scss  _sidebar.scss
doc/_static/: gradient.avif  install.sh
doc/_themes/clearly/: tailwind.config.js  webpack.config.js
doc/_themes/clearly/css/: content.css  styles.css
etc/: Makefile.am  clearly.conf  clearly.service
examples/: Dockerfile.almalinux_8ch  Dockerfile.almalinux_8clearly  Dockerfile.centos_7ch  Dockerfile.centos_7clearly  Dockerfile.debian_11clearly  Dockerfile.libfabric  Dockerfile.mpich  Dockerfile.nvidia  Dockerfile.openmpi  Makefile.am  docker-compose.yml
examples/chtest/: Build
examples/copy/: Dockerfile  test.bats
examples/distroless/: Dockerfile  test.bats
examples/exhaustive/: Dockerfile  test.bats
examples/hello/: Dockerfile  README  test.bats
examples/lammps/: Dockerfile  test.bats
examples/lustre/: Dockerfile  test.bats
examples/mpibench/: Dockerfile.mpich  Dockerfile.openmpi  test.bats
examples/mpihello/: Dockerfile.mpich  Dockerfile.openmpi  slurm.sh  test.bats
examples/multistage/: Dockerfile  test.bats
lib/: Makefile.am  _base.sh  _build.py  _build_cache.py  _clearly.py  _executor.py  _filesystem.py  _force.py  _grammar.py  _http.py  _image.py  _irtree.py  _misc.py  _proxy.py  _pull.py  _push.py  _reference.py  _registry.py  _runtime.py  _storage.py  _syncthing.py  _tree.py  _zeroconf.py  base.sh  build.py  build_cache.py  charliecloud.py  clearly.py  constants.py  executor.py  filesystem.py  force.py  image.py  irtree.py  misc.py  modify.py  pull.py  push.py  reference.py  registry.py  (+1 more)
misc/: Makefile.am  grep  loc  version
packaging/: Makefile.am  README  requirements.txt
routes/: container.py
scripts/: install-deps.sh
static/: Makefile.am
static/icons/css/: all.css  all.min.css
static/icons/metadata/: icon-families.yml
static/styles/: main.scss
static/styles/base/: _variables.scss
static/styles/components/: _searchbar.scss
static/styles/layout/: _backdrop.scss  _footer.scss  _header.scss  _navigation.scss  _searchbar.scss  _sidebar.scss
static/styles/pages/: _index.scss  _studio.scss
static/templates/: base.html  main.html
static/templates/components/: searchbar.html
static/templates/layout/: footer.html  header.html  navigation.html  searchbar.html  sidebar.html
static/templates/pages/: index.html  studio.html
templates/: Makefile.am  base.html
test/: .dockerignore  Build.centos7xz  Build.docker_pull  Build.missing  Dockerfile.argenv  Dockerfile.file-quirks  Dockerfile.metadata  Dockerfile.ocimanifest  Dockerfile.quick  Makefile.am  common.bash  docker-compose.yml  docs-sane.py  docs-sane.py.in  doctest-auto  doctest.py  force-auto.py  old-storage  order-py.py  run_first.bats  whiteout
test/ci/: Dockerfile.debian  README  install.bash  testjob.bash
test/gitlab.com/: README  base.bash  build-images  debian.df  info.sh  install.bash  pipeline.yml  reviews-email  test.bash  testjob.bash
test/make-auto.d/: build.bats.in  build_custom.bats.in  builder_to_archive.bats.in  unpack.bats.in
test/run/: build-rpms.bats  ch-convert.bats  ch-fromhost.bats  ch-run_escalated.bats  ch-run_join.bats  ch-run_misc.bats  ch-run_uidgid.bats  convert.bats  equip.bats  fromhost.bats  run_escalated.bats  run_isolation.bats  run_join.bats  run_misc.bats  run_uidgid.bats
(+25 files in other folders)
